# ibm-bmcweb

./: .secrets.baseline  Redfish.md  appscan-config.xml  meson.build  meson.options  meson_options.txt
config/: bmcweb.service.in  bmcweb_config.h.in
http/: http_body.hpp  http_connection.hpp  http_response.hpp  routing.hpp  websocket.hpp
include/: authentication.hpp  dbus_privileges.hpp  dump_utils.hpp  ossl_random.hpp  sessions.hpp  ssl_key_handler.hpp
redfish-core/include/: error_messages.hpp  event_service_manager.hpp  query.hpp
redfish-core/lib/: account_service.hpp  assembly.hpp  bios.hpp  chassis.hpp  environment_metrics.hpp  ethernet.hpp  hypervisor_system.hpp  log_services.hpp  managers.hpp  message_registries.hpp  metadata.hpp  network_protocol.hpp  pcie.hpp  pcie_slots.hpp  processor.hpp  service_root.hpp  systems.hpp  update_service.hpp
redfish-core/schema/oem/ibm/: meson.build
redfish-core/schema/oem/ibm/csdl/: IBMAssembly_v1.xml  IBMLogEntry_v1.xml  OemComputerSystem_v1.xml  OemMessage_v1.xml
redfish-core/schema/oem/ibm/json-schema/: IBMAssembly.json  IBMAssembly.v1_0_0.json  IBMLogEntry.json  IBMLogEntry.v1_0_0.json  IBMServiceRoot.v1_0_0.json  OemAssembly.json  OemComputerSystem.json  OemComputerSystem.v1_0_0.json  OemLogEntry.json  OemMessage.json
redfish-core/schema/oem/openbmc/: meson.build
redfish-core/src/: error_messages.cpp
src/: ossl_random.cpp  webserver_main.cpp  webserver_run.cpp
static/redfish/v1/schema/: OemComputerSystem_v1.xml
test/redfish-core/include/utils/: dbus_utils.cpp
(+8 files in other folders)
